# ergo-telescope

./: .gitignore  .travis.yml  Makefile  Makefile.in  README.md  compile.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure~  libtool  todo.md  travis_buildscript.sh
ERGO-CBP/: ergo-telescope.cbp  ergo-telescope.depend  ergo-telescope.layout  makefile
autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
debian/: README.Debian  README.source  changelog  control  copyright  ergo-telescope.cron.d.ex  ergo-telescope.default.ex  ergo-telescope.doc-base.EX  ergo-telescope.init.d  ergo-telescope.install  ergo-telescope.postinst  ergo-telescope.service  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
debian/config-dir/: GPS_aviation.conf  GPS_stationary.conf  ergo-telescope.cfg
src/: .gitignore  CERGO_CONFIG.cpp  CERGO_CONFIG.h  CERGO_GPIO.cpp  CERGO_GPIO.h  CERGO_GPS.cpp  CERGO_GPS.h  CERGO_INTERNET.cpp  CERGO_INTERNET.h  CERGO_SERIAL.cpp  CERGO_SERIAL.cpp.BACKUP.6307.cpp  CERGO_SERIAL.cpp.BASE.6307.cpp  CERGO_SERIAL.cpp.REMOTE.6307.cpp  CERGO_SERIAL.h  CLog.cpp  CLog.h  Makefile  Makefile.am  Makefile.in  ergo-telescope  main.cpp
src/.deps/: CERGO_CONFIG.Po  CERGO_GPIO.Po  CERGO_GPS.Po  CERGO_INTERNET.Po  CERGO_SERIAL.Po  CLog.Po  main.Po
