# what flags you want to pass to the C compiler & linker
CFLAGS = -Wall --std=c++11 -O3
AM_LDFLAGS = -lcurl -lpthread -lconfig++

bin_PROGRAMS = ergo-telescope

ergo_telescope_SOURCES = main.cpp CERGO_GPS.cpp  CERGO_INTERNET.cpp CERGO_GPIO.cpp  CERGO_SERIAL.cpp  CLog.cpp CERGO_GPS.h    CERGO_INTERNET.h  CERGO_GPIO.h   CERGO_SERIAL.h    CLog.h 


